# GR5526-Lvgl-Simulator

./: .gitignore  CMakeLists.txt  README.md  README_en.md  attr_macro.h  drv_adapter_port_simulator.c  drv_adapter_port_simulator.h  lv_port_simulator.c  lv_port_simulator.h  main.c
SDL2/: CMakeLists.txt
gr5526_sim_lib/windows-x86-msvc/: graphics_lvgl_v831_lib_sim.lib  graphics_sdk_sim.lib
gr55xx_drv_mimic/: app_graphics_dc.h  app_graphics_gpu.c  app_graphics_gpu.h  app_graphics_ospi.h  app_key.h  app_log.h  app_rtc.c  app_rtc.h  bsp_rtc.h  gr55xx.h  gr55xx_delay.h  gr55xx_hal.h  grx_hal.h  lv_gpu_draw_utils.c  osal.h  rom_symbol.c
